# podcast-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.agent/rules/: overview.md
bot/: CLAUDE.md  __init__.py  config.py  database.py  feed.py  formatting.py  handlers.py  i18n.py  scheduler.py  summarizer.py
bot/ai/: CLAUDE.md  _agent.py  chat.py  condenser.py  corrector.py  prompt_engineer.py  summarizer.py
bot/handlers/: CLAUDE.md  __init__.py  admin.py  callbacks.py  chat.py  digest.py  episode_picker.py  fallback.py  language.py  setprompt.py  subscribe.py  transcript.py
bot/transcribers/: CLAUDE.md  __init__.py  audio_pipeline.py  base.py  groq.py  pipeline.py  whisper.py
docs/superpowers/specs/: 2026-03-15-web-ui-phase1-design.md
migrate/: __init__.py  __main__.py
migrations/: 001_down.sql  001_up.sql  002_down.sql  002_up.sql  003_down.sql  003_up.sql
shared/: database.py
tests/: conftest.py  test_database.py  test_feed.py  test_feed_chunking.py  test_formatting.py  test_handlers_setprompt.py  test_handlers_transcript.py  test_i18n.py  test_migrate.py  test_setprompt_refine.py  test_summarizer.py  test_transcribers_audio_pipeline.py  test_web_database.py  test_web_episodes.py  test_web_jobs.py  test_web_jobs_router.py  test_web_subscriptions.py
web/: app.py  auth.py  jobs.py
web/routers/: episodes.py  jobs.py  subscriptions.py
web/static/: app.js  index.html  style.css
