[project]
name = "podcast-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20",
    "apscheduler==4.0.0a6",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic-ai>=0.0.49",
    "python-dotenv>=1.0",
    "python-telegram-bot>=20.0",
    "python-ulid>=2.0",
    "faster-whisper>=1.0",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
